src/logs/dag_id=dag_with_postgres_operator_v01/run_id=manual__2024-06-25T11:35:51.818911+00:00/task_id=insert_into_table/attempt=1.log
[2024-06-25T11:40:38.004+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-06-25T11:40:38.018+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.insert_into_table manual__2024-06-25T11:35:51.818911+00:00 [queued]>
[2024-06-25T11:40:38.021+0000] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_with_postgres_operator_v01.insert_into_table manual__2024-06-25T11:35:51.818911+00:00 [queued]>
[2024-06-25T11:40:38.021+0000] {taskinstance.py:2306} INFO - Starting attempt 1 of 6
[2024-06-25T11:40:38.026+0000] {taskinstance.py:2330} INFO - Executing <Task(PostgresOperator): insert_into_table> on 2024-06-25 11:35:51.818911+00:00
[2024-06-25T11:40:38.029+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=20597) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2024-06-25T11:40:38.029+0000] {standard_task_runner.py:63} INFO - Started process 20598 to run task
[2024-06-25T11:40:38.029+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'dag_with_postgres_operator_v01', 'insert_into_table', 'manual__2024-06-25T11:35:51.818911+00:00', '--job-id', '38', '--raw', '--subdir', 'DAGS_FOLDER/postgres_dag.py', '--cfg-path', '/tmp/tmpqt__08mm']
[2024-06-25T11:40:38.030+0000] {standard_task_runner.py:91} INFO - Job 38: Subtask insert_into_table
[2024-06-25T11:40:38.049+0000] {task_command.py:426} INFO - Running <TaskInstance: dag_with_postgres_operator_v01.insert_into_table manual__2024-06-25T11:35:51.818911+00:00 [running]> on host 3b316f897547
[2024-06-25T11:40:38.080+0000] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='jack' AIRFLOW_CTX_DAG_ID='dag_with_postgres_operator_v01' AIRFLOW_CTX_TASK_ID='insert_into_table' AIRFLOW_CTX_EXECUTION_DATE='2024-06-25T11:35:51.818911+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-06-25T11:35:51.818911+00:00'
[2024-06-25T11:40:38.081+0000] {taskinstance.py:430} INFO - ::endgroup::
[2024-06-25T11:40:38.087+0000] {sql.py:276} INFO - Executing: 
            insert into Orders values(1,'pending)
        
[2024-06-25T11:40:38.091+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-25T11:40:38.095+0000] {base.py:84} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-06-25T11:40:38.099+0000] {sql.py:487} INFO - Running statement: 
            insert into Orders values(1,'pending)
        , parameters: None
[2024-06-25T11:40:38.100+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-06-25T11:40:38.100+0000] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
             ^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 435, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 492, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: unterminated quoted string at or near "'pending)
        "
LINE 2:             insert into Orders values(1,'pending)
                                                ^

[2024-06-25T11:40:38.105+0000] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_with_postgres_operator_v01, task_id=insert_into_table, run_id=manual__2024-06-25T11:35:51.818911+00:00, execution_date=20240625T113551, start_date=20240625T114038, end_date=20240625T114038
[2024-06-25T11:40:38.109+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 38 for task insert_into_table (unterminated quoted string at or near "'pending)
        "
LINE 2:             insert into Orders values(1,'pending)
                                                ^
; 20598)
[2024-06-25T11:40:38.130+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2024-06-25T11:40:38.137+0000] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-06-25T11:40:38.137+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
